--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "luatexko.doc.tar.xz": 952f8d9ec0e6659d9fb202a00c5cc02955f938bb
-  "luatexko.tar.xz": 2f00e944cf8d8e99208368e9c34b43bb0b73d2be
+  luatexko.doc.tar.xz: 952f8d9ec0e6659d9fb202a00c5cc02955f938bb
+  luatexko.tar.xz: 2f00e944cf8d8e99208368e9c34b43bb0b73d2be
