Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  luatexko.doc.tar.xz: deb060f82db8a3345e6b8c3f61f5d53289d37509
-  luatexko.tar.xz: ea41b9e3a3a8ff12d32d1d4b837916196ffe3c7f
+  luatexko.doc.r64893.tar.xz: cce0ad608b5dc4d567f477269e74c96458ec3492
+  luatexko.r64893.tar.xz: 48e037a66b5ee92f4492c6e191cfd9ed629ee49c
